# Local_application_dev

./: ACP_AUTHORITY.md  ACP_V1_COMPLETE.md  LLM_CONTRACT.md  aletheia_mcp.py  fi_migration.py  inject_features.py  ontext.txt
ACP_V1/: ACP_V1.code-workspace  GitInfo_pb2.data.json  GitInfo_pb2.meta.json  Local_application_dev  Local_application_dev.code-workspace  Local_application_dev_bundle.yaml  _git_credential.meta.json  acp_migration_manager.py  aletheia_mcp.py  backend_startup.py  fi_migration.py  git_util.data.json  git_util.meta.json  governance_report.txt  main_platform.py  methodology_library.json  migration_log.txt  migration_plan.csv  orchestrator.py  orchestrator_bus.db  package-lock.json  purge_zombies.py  requirements_master.txt  run_boot.bat  run_frontend.bat  start_backend.bat  startup_config.yaml  update_mcp_setup.py
ACP_V1/tooling/common/pdf-ocr-app/: README.md  pyproject.toml
ACP_v2/: .mypy.ini  README.md  __init__.py  agent_test.txt  aletheia_mcp.py  fix_config.py  lm_studio_config_export.json  main_platform.py  migration_import_map.json  orchestrator.py  orchestrator.status.json  package-lock.json  package.json  setup_config.py  simulation_ledger.csv  system_context.json  system_manifest.py  test_identities.py
Ingest_pipeline_V4r/: report_detailed_74bc588f.json  scan_DIRECTORY_MAP_74bc588f.json
canonical_code_platform_port/: QUICKSTART.md  README.md  governance_report.txt  plan.txt  pytest.ini  rag_vectors.db  requirements.txt  start_platform.bat  ui_app.py  workflow_ingest_enhanced.py
control_hub_port/: CLI_ARGUMENT_FIX.md  (+3 more)
(+17711 files in other folders)
